--- a/CookPopularControl/Themes/BaseStyle/TextBoxBaseBaseStyle.xaml
+++ b/CookPopularControl/Themes/BaseStyle/TextBoxBaseBaseStyle.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
+                    xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:pt="https://Chance.CookPopularCSharpToolkit/2021/xaml">
 
     <ResourceDictionary.MergedDictionaries>
@@ -15,7 +16,7 @@
         <Setter Property="SnapsToDevicePixels" Value="True" />
         <Setter Property="CaretBrush" Value="{DynamicResource PrimaryForegroundBrush}" />
         <Setter Property="KeyboardNavigation.TabNavigation" Value="None" />
-        <Setter Property="ScrollViewer.PanningMode" Value="VerticalFirst" />
+        <Setter Property="ScrollViewer.PanningMode" Value="Both" />
         <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
         <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
         <Setter Property="Stylus.IsFlicksEnabled" Value="False" />
@@ -32,25 +33,34 @@
                                 <ColumnDefinition />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <ScrollViewer x:Name="PART_ContentHost"
-                                          Foreground="{TemplateBinding Foreground}"
-                                          Background="Transparent"
-                                          FontSize="{TemplateBinding FontSize}"
-                                          SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                          Focusable="False"
-                                          HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
-                                          UseLayoutRounding="{TemplateBinding UseLayoutRounding}"
-                                          VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" />
-                            <TextBlock x:Name="PART_PlaceHolder"
-                                       Text="{TemplateBinding common:TextElementAttached.PlaceHolder}"
-                                       Foreground="{TemplateBinding common:TextElementAttached.PlaceHolderBrush}"
-                                       Padding="{TemplateBinding Padding}"
-                                       SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
-                                       HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
-                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
-                                       TextAlignment="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=TextBox}, Path=TextAlignment}"
-                                       TextTrimming="CharacterEllipsis"
-                                       Visibility="Collapsed" />
+                            <pc:SimpleGrid Grid.Column="0">
+                                <ScrollViewer x:Name="PART_ContentHost"
+                                              Background="Transparent"
+                                              SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                              Focusable="False"
+                                              HorizontalScrollBarVisibility="{TemplateBinding ScrollViewer.HorizontalScrollBarVisibility}"
+                                              UseLayoutRounding="{TemplateBinding UseLayoutRounding}"
+                                              VerticalScrollBarVisibility="{TemplateBinding ScrollViewer.VerticalScrollBarVisibility}" />
+                                <TextBlock x:Name="PART_PlaceHolder"
+                                           Text="{TemplateBinding common:TextElementAttached.PlaceHolder}"
+                                           Foreground="{TemplateBinding common:TextElementAttached.PlaceHolderBrush}"
+                                           Padding="{TemplateBinding Padding}"
+                                           SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                           HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                           VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                           TextTrimming="CharacterEllipsis"
+                                           Visibility="Collapsed" />
+                                <Border Margin="2,0" Padding="0,1,0,0">
+                                    <TextBlock x:Name="PART_Trimming"
+                                               Foreground="{TemplateBinding Foreground}"
+                                               Padding="{TemplateBinding Padding}"
+                                               SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}"
+                                               HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                               VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                               UseLayoutRounding="{TemplateBinding UseLayoutRounding}"
+                                               Visibility="Collapsed" />
+                                </Border>
+                            </pc:SimpleGrid>
                             <Button x:Name="PART_ClearButton" Grid.Column="1"
                                     Height="{TemplateBinding Height}"
                                     Foreground="{TemplateBinding Foreground}"
@@ -74,6 +84,14 @@
                         <DataTrigger Binding="{Binding RelativeSource={RelativeSource Self}, Path=Text, Converter={pt:EmptyOrNullToBooleanConverter}}" Value="True">
                             <Setter Property="Visibility" Value="Visible" TargetName="PART_PlaceHolder" />
                         </DataTrigger>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="pc:TextBoxBaseAssistant.IsTrimming" Value="True" />
+                                <Condition Property="IsFocused" Value="False" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="Visibility" Value="Collapsed" TargetName="PART_ContentHost" />
+                            <Setter Property="Visibility" Value="Visible" TargetName="PART_Trimming" />
+                        </MultiTrigger>
                         <Trigger Property="IsMouseOver" Value="True">
                             <Setter Property="BorderBrush" Value="{DynamicResource ControlMouseOverBackground}" />
                         </Trigger>
