--- a/CookPopularControl/Themes/DefaultPopularControl.xaml
+++ b/CookPopularControl/Themes/DefaultPopularControl.xaml
@@ -1,6 +1,5 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:dialog="clr-namespace:CookPopularControl.DialogBox"
                     xmlns:drag="clr-namespace:CookPopularControl.Controls.Dragables"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
                     xmlns:win="clr-namespace:CookPopularControl.Windows">
@@ -67,19 +66,15 @@
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/SwiperStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/SwitchButtonStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/TextPathStyle.xaml" />
-        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ToastMessageStyle.xaml" />
-
 
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/OtherControlStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/DragableControlStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-    <Style x:Key="{x:Type dialog:DialogBox}" TargetType="{x:Type dialog:DialogBox}" BasedOn="{StaticResource DefaultDialogBoxStyle}" />
     <Style x:Key="{x:Type win:NormalWindow}" TargetType="{x:Type win:NormalWindow}" BasedOn="{StaticResource NormalWindowStyle}" />
     <Style x:Key="{x:Type win:SideBarWindow}" TargetType="{x:Type win:SideBarWindow}" BasedOn="{StaticResource SideBarWindowStyle}" />
     <Style x:Key="{x:Type win:NoneTitleBarWindow}" TargetType="{x:Type win:NoneTitleBarWindow}" BasedOn="{StaticResource NoneTitleBarWindowStyle}" />
     <Style x:Key="{x:Type win:MessageDialog}" TargetType="{x:Type win:MessageDialog}" BasedOn="{StaticResource MessageDialogStyle}" />
-    <Style x:Key="{x:Type win:ToastMessage}" TargetType="{x:Type win:ToastMessage}" BasedOn="{StaticResource ToastMessageStyle}" />
 
 
     <Style x:Key="{x:Type Button}" TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}" />
@@ -127,6 +122,7 @@
     <Style x:Key="{x:Type pc:CircleMenu}" TargetType="{x:Type pc:CircleMenu}" BasedOn="{StaticResource CircleMenuStyle}" />
     <Style x:Key="{x:Type pc:Clock}" TargetType="{x:Type pc:Clock}" BasedOn="{StaticResource DefaultClockStyle}" />
     <Style x:Key="{x:Type pc:ColorPicker}" TargetType="{x:Type pc:ColorPicker}" BasedOn="{StaticResource DefaultColorPickerStyle}" />
+    <Style x:Key="{x:Type pc:DialogBox}" TargetType="{x:Type pc:DialogBox}" BasedOn="{StaticResource DefaultDialogBoxStyle}" />
     <Style x:Key="{x:Type pc:DivideLine}" TargetType="{x:Type pc:DivideLine}" BasedOn="{StaticResource DefaultDivideLineStyle}" />
     <Style x:Key="{x:Type pc:DotCircleLoading}" TargetType="{x:Type pc:DotCircleLoading}" BasedOn="{StaticResource DefaultDotCircleLoadingStyle}" />
     <Style x:Key="{x:Type pc:DotLineLoading}" TargetType="{x:Type pc:DotLineLoading}" BasedOn="{StaticResource DefaultDotLineLoadingStyle}" />
@@ -152,6 +148,7 @@
     <Style x:Key="{x:Type pc:SwitchButton}" TargetType="{x:Type pc:SwitchButton}" BasedOn="{StaticResource DefaultSwitchButtonStyle}" />
     <Style x:Key="{x:Type pc:TextPath}" TargetType="{x:Type pc:TextPath}" BasedOn="{StaticResource DefaultTextPathStyle}" />
     <Style x:Key="{x:Type pc:TimePicker}" TargetType="{x:Type pc:TimePicker}" BasedOn="{StaticResource DefaultTimePickerStyle}" />
+    <Style x:Key="{x:Type pc:ToastMessage}" TargetType="{x:Type pc:ToastMessage}" BasedOn="{StaticResource ToastMessageStyle}" />
 
 
     <Style x:Key="{x:Type drag:Branch}" TargetType="{x:Type drag:Branch}" BasedOn="{StaticResource DefaultBranchStyle}" />
