--- a/CookPopularControl/Themes/NotifyStyle.xaml
+++ b/CookPopularControl/Themes/NotifyStyle.xaml
@@ -2,9 +2,10 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:common="clr-namespace:CookPopularControl.Communal"
                     xmlns:pc="clr-namespace:CookPopularControl.Controls"
-                    xmlns:tb="http://www.hardcodet.net/taskbar">
+                    xmlns:win="clr-namespace:CookPopularControl.Windows">
 
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/ButtonStyle.xaml" />
         <ResourceDictionary Source="pack://application:,,,/CookPopularControl;component/Themes/WindowStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
@@ -37,12 +38,12 @@
         <Setter Property="HorizontalContentAlignment" Value="Center" />
         <Setter Property="VerticalContentAlignment" Value="Center" />
         <Setter Property="Padding" Value="5" />
-        <Setter Property="Effect" Value="{DynamicResource NotifyMessageShadowEffect}" />
+        <Setter Property="Effect" Value="{StaticResource NotifyMessageShadowEffect}" />
         <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type pc:BubbleMessage}">
-                    <AdornerDecorator SnapsToDevicePixels="True" CacheMode="{DynamicResource DefaultBitmapCache}">
+                    <AdornerDecorator SnapsToDevicePixels="True" CacheMode="{StaticResource DefaultBitmapCache}">
                         <Grid Margin="{TemplateBinding Padding}">
                             <Grid.RowDefinitions>
                                 <RowDefinition />
@@ -73,10 +74,10 @@
                             <Button x:Name="CloseButton" Grid.Column="2"
                                     Foreground="{TemplateBinding Foreground}"
                                     Command="{x:Static pc:NotifyMessageBase.CloseNotifyMessageCommand}"
-                                    Style="{DynamicResource ButtonTransparentIconStyle}"
-                                    common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
+                                    common:FrameworkElementBaseAttached.IconGeometry="{StaticResource CloseGeometry}"
                                     common:FrameworkElementBaseAttached.IconHeight="14"
-                                    common:FrameworkElementBaseAttached.IconWidth="14" />
+                                    common:FrameworkElementBaseAttached.IconWidth="14"
+                                    Style="{StaticResource ButtonTransparentIconStyle}" />
                             <UniformGrid x:Name="PART_ButtonGroup" Grid.Row="1" Grid.Column="1"
                                          Grid.ColumnSpan="2" Columns="2"
                                          Visibility="Collapsed">
@@ -85,13 +86,13 @@
                                         Foreground="Red"
                                         Command="{x:Static pc:BubbleMessage.CancelNotifyMessageCommand}"
                                         HorizontalAlignment="Stretch"
-                                        Style="{DynamicResource ButtonTransparentStyle}" />
+                                        Style="{StaticResource ButtonTransparentStyle}" />
                                 <Button Height="26"
                                         Content="确定"
                                         Foreground="Red"
                                         Command="{x:Static pc:BubbleMessage.ConfirmNotifyMessageCommand}"
                                         HorizontalAlignment="Stretch"
-                                        Style="{DynamicResource ButtonTransparentStyle}" />
+                                        Style="{StaticResource ButtonTransparentStyle}" />
                             </UniformGrid>
                         </Grid>
                     </AdornerDecorator>
@@ -106,36 +107,102 @@
     </Style>
 
     <Style x:Key="PopupMessageStyle" TargetType="{x:Type pc:PopupMessage}">
-        <Setter Property="WindowStyle" Value="None" />
-        <Setter Property="AllowsTransparency" Value="True" />
-        <Setter Property="ResizeMode" Value="NoResize" />
-        <Setter Property="SizeToContent" Value="WidthAndHeight" />
-        <Setter Property="Background" Value="White" />
-        <Setter Property="ShowActivated" Value="False" />
+        <Setter Property="ShowActivated" Value="True" />
         <Setter Property="ShowInTaskbar" Value="False" />
+        <Setter Property="Background" Value="White" />
+        <Setter Property="SizeToContent" Value="WidthAndHeight" />
         <Setter Property="OverridesDefaultStyle" Value="True" />
-        <Setter Property="Effect" Value="{DynamicResource NotifyMessageShadowEffect}" />
+        <Setter Property="ResizeMode" Value="NoResize" />
+        <Setter Property="WindowStyle" Value="None" />
+        <Setter Property="WindowChrome.WindowChrome">
+            <Setter.Value>
+                <WindowChrome CaptionHeight="30" GlassFrameThickness="-1" />
+            </Setter.Value>
+        </Setter>
+        <Setter Property="Effect" Value="{StaticResource NotifyMessageShadowEffect}" />
+        <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="common:WindowAttached.ShowInTaskManager" Value="False" />
         <Setter Property="common:WindowAttached.IgnoreAltF4" Value="True" />
-        <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="5" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type pc:PopupMessage}">
-                    <Border Background="{TemplateBinding Background}"
-                            CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}"
-                            Margin="5" SnapsToDevicePixels="True">
-                        <pc:SimpleGrid>
-                            <ContentPresenter Margin="{TemplateBinding Padding}" />
-                            <Button Width="30" Height="30"
-                                    Command="{x:Static SystemCommands.CloseWindowCommand}"
+                    <AdornerDecorator SnapsToDevicePixels="True" CacheMode="{StaticResource DefaultBitmapCache}">
+                        <win:ChromeWindowClient>
+                            <Border Background="{TemplateBinding Background}"
+                                    CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}"
+                                    Margin="5" SnapsToDevicePixels="True"
+                                    Effect="{StaticResource ShadowEffectDepth0}">
+                                <pc:SimpleGrid>
+                                    <ContentPresenter Margin="{TemplateBinding Padding}" />
+                                    <Button Width="30" Height="30"
+                                            Command="{x:Static SystemCommands.CloseWindowCommand}"
+                                            Margin="5"
+                                            HorizontalAlignment="Right" VerticalAlignment="Top"
+                                            WindowChrome.IsHitTestVisibleInChrome="True"
+                                            common:FrameworkElementBaseAttached.IconGeometry="{StaticResource CloseGeometry}"
+                                            common:FrameworkElementBaseAttached.IconHeight="16"
+                                            common:FrameworkElementBaseAttached.IconWidth="16"
+                                            Style="{StaticResource ButtonNoMouseOverTransparentIconStyle}" />
+                                </pc:SimpleGrid>
+                            </Border>
+                        </win:ChromeWindowClient>
+                    </AdornerDecorator>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <!--  可参考https://blog.walterlv.com/post/wpf-transparent-window-without-allows-transparency.html  -->
+    <Style x:Key="ToastMessageStyle" TargetType="{x:Type pc:ToastMessage}">
+        <Setter Property="MinHeight" Value="80" />
+        <Setter Property="MinWidth" Value="200" />
+        <Setter Property="MaxWidth" Value="476" />
+        <Setter Property="MaxHeight" Value="680" />
+        <Setter Property="Foreground" Value="{DynamicResource PrimaryForegroundBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource DefaultFontSize}" />
+        <Setter Property="ResizeMode" Value="NoResize" />
+        <Setter Property="SizeToContent" Value="WidthAndHeight" />
+        <Setter Property="ShowInTaskbar" Value="False" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="WindowStyle" Value="None" />
+        <Setter Property="WindowChrome.WindowChrome">
+            <Setter.Value>
+                <WindowChrome CaptionHeight="0" GlassFrameThickness="-1" />
+            </Setter.Value>
+        </Setter>
+        <Setter Property="common:FrameworkElementBaseAttached.CornerRadius" Value="10" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type pc:ToastMessage}">
+                    <AdornerDecorator SnapsToDevicePixels="True" CacheMode="{StaticResource DefaultBitmapCache}">
+                        <win:ChromeWindowClient>
+                            <Border x:Name="RootBorder"
+                                    BorderBrush="{TemplateBinding BorderBrush}"
+                                    BorderThickness="{TemplateBinding BorderThickness}"
+                                    Background="{TemplateBinding Background}"
+                                    CornerRadius="{TemplateBinding common:FrameworkElementBaseAttached.CornerRadius}"
                                     Margin="5"
-                                    HorizontalAlignment="Right" VerticalAlignment="Top"
-                                    Style="{DynamicResource ButtonNoMouseOverTransparentIconStyle}"
-                                    common:FrameworkElementBaseAttached.IconGeometry="{DynamicResource CloseGeometry}"
-                                    common:FrameworkElementBaseAttached.IconHeight="16"
-                                    common:FrameworkElementBaseAttached.IconWidth="16" />
-                        </pc:SimpleGrid>
-                    </Border>
+                                    Effect="{StaticResource ShadowEffectDepth1}">
+                                <Grid Margin="10,0" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="60" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+                                    <Path Grid.Column="0"
+                                          Width="30" Height="30"
+                                          Data="{TemplateBinding ToastMessageIcon}"
+                                          Fill="{TemplateBinding ToastMessageIconBrush}"
+                                          Stretch="Uniform" />
+                                    <ContentPresenter Grid.Column="1"
+                                                      Content="{TemplateBinding Content}"
+                                                      HorizontalAlignment="Left" VerticalAlignment="Center"
+                                                      ClipToBounds="True"
+                                                      TextElement.Foreground="{TemplateBinding Foreground}" />
+                                </Grid>
+                            </Border>
+                        </win:ChromeWindowClient>
+                    </AdornerDecorator>
+                    <ControlTemplate.Triggers />
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
